<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_about"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:drawableTop="@drawable/ic_question_mark"
            android:text="" />

    </RelativeLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_00"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/students"
            android:textStyle="bold|italic"
            android:drawableRight="@drawable/ic_thumb_down"
            android:drawableLeft="@drawable/ic_students"
            android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/TheEiffelTower"
            android:textStyle="bold|italic"
            android:drawableRight="@drawable/ic_thumb_up"
            android:drawableLeft="@drawable/ic_eiffeltower"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_20"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Hamburgers"
            android:textStyle="bold|italic"
            android:drawableRight="@drawable/ic_thumb_up"
            android:drawableLeft="@drawable/ic_hamburger"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_30"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/spiders"
            android:textStyle="bold|italic"
            android:drawableRight="@drawable/ic_thumb_down"
            android:drawableLeft="@drawable/ic_spider"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_40"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/rap"
            android:textStyle="bold|italic"
            android:drawableRight="@drawable/ic_thumb_up"
            android:drawableLeft="@drawable/ic_rap"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_50"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/soccer"
            android:textStyle="bold|italic"
            android:drawableRight="@drawable/ic_thumb_up"
            android:drawableLeft="@drawable/ic_soccer"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_60"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/trump"
            android:textStyle="bold|italic"
            android:drawableRight="@drawable/ic_thumb_down"
            android:drawableLeft="@drawable/ic_trump"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_70"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/nature"
            android:textStyle="bold|italic"
            android:drawableRight="@drawable/ic_thumb_up"
            android:drawableLeft="@drawable/ic_nature"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>